--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,15 +26,12 @@ jobs:
           command: |
              OLDER_VERSION=$(node -p "require('./package.json').version")
              echo "export OLDER_VERSION=$OLDER_VERSION" >> $BASH_ENV
-             npm run semantic-release || true
+             yarn run semantic-release || true
       - save_cache:
           name:
           key: yarn-packages-{{ checksum "yarn.lock" }}
           paths:
             - ~/.cache/yarn
-      - run: 
-          name: build api server package
-          command: cd packages/api-server && yarn build          
       - run: 
           name: Setup Google Cloud SDK
           command: |
@@ -44,14 +41,14 @@ jobs:
             gcloud --quiet config set compute/zone $GOOGLE_COMPUTE_ZONE
       - setup_remote_docker 
       - run: 
-          name: build dockerimage for api
+          name: build dockerimage for analytics proxy
           command: |                 
             PACKAGE_VERSION=$(node -p "require('./package.json').version")
             if [[ $OLDER_VERSION != $PACKAGE_VERSION ]];then            
-                   docker build -f ./packages/api-server/Dockerfile  -t porch-guru-api .
-                   docker tag porch-guru-api  gcr.io/$GOOGLE_PROJECT_ID/porch-guru-api:$PACKAGE_VERSION
+                   docker build -f ./Dockerfile  -t porch-guru-analytics-proxy .
+                   docker tag porch-guru-analytics-proxy  gcr.io/$GOOGLE_PROJECT_ID/porch-guru-analytics-proxy:$PACKAGE_VERSION
                    gcloud auth print-access-token | docker login -u oauth2accesstoken --password-stdin https://gcr.io
-                   docker push gcr.io/$GOOGLE_PROJECT_ID/porch-guru-api:$PACKAGE_VERSION     
+                   docker push gcr.io/$GOOGLE_PROJECT_ID/porch-guru-analytics-proxy:$PACKAGE_VERSION     
             fi
 
 
